src/App.css
html, body{
  height: 100%;
  width: 100%;
  overflow: hidden;
  color: white;
  font-family: 'Lato', sans-serif;
  font-display: fallback;
  font-weight: 400;
}
#root{
  margin-top: -21px;
}

body a {
  color: inherit;
  text-decoration: none;
}

#particles-js {
  width: 100%;
  height: 100%;
  position: fixed;
  background-color: #000; 
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  z-index: -1;
}

.circleBase {
  border-radius: 50%;
}

#navMenuBtn{
  display: flex;
  width: 50px;
  height: 50px;
  border: 3px solid #fff;
  align-content: center;
  justify-content: center;
}

